--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -2,12 +2,12 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'adventure_works_analytics'
+name: 'dbt_analytics'
 version: '1.0.1'
 config-version: 2
 
 # This setting configures which "profile" dbt uses for this project.
-profile: 'adventure_works_analytics'
+profile: 'dbt_analytics'
 
 # These configurations specify where dbt should look for different types of files.
 # The `model-paths` config, for example, states that models in this project can be
@@ -31,48 +31,12 @@ clean-targets:         # directories to be removed by `dbt clean`
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
 models:
-  adventure_works_analytics:
+  dbt_analytics:
     # Config indicated by + and applies to all files under models/example/
-    commercial:
-      +database: commercial
-      +tags: crm
-      staging: &staging
-        +materialized: ephemeral
-      intermediate: &intermediate
-        +materialized: ephemeral
-      marts: &marts
-        +materialized: table
-
-    projects:
-      +database: projects
-      +tags: projects
-      staging: *staging
-      intermediate: *intermediate
-      marts: *marts
-
-    people:
-      +database: people
-      +tags: people
-      staging: *staging
-      intermediate: *intermediate
-      marts: *marts
-
-    bi-tool:
-      +enabled: false
-
-# Seeds configuration
-seeds:
-  adventure_works_analytics:
-    commercial:
-      +database: commercial
-      +tags: crm
-      +schema: raw_sheets
-    people:
-      +database: people
-      +tags: people
-      +schema: raw_sheets
-
-# Snapshots configuration
-snapshots:
-  adventure_works_analytics:
-    +target_schema: snapshots
+    
+    staging: &staging
+      +materialized: ephemeral
+    intermediate: &intermediate
+      +materialized: ephemeral
+    marts: &marts
+      +materialized: table
