slight modification in person_id description

--- a/models/staging/schema/stg_person.yml
+++ b/models/staging/schema/stg_person.yml
@@ -8,7 +8,7 @@ models:
     columns:
 
       - name: business_entity_id
-        description: Unique ID for the product.
+        description: Unique ID for the person.
         tests:
           - not_null
           - unique
