Addition of person_id in both model and documentation files

--- a/models/staging/schema/stg_credit_card.yml
+++ b/models/staging/schema/stg_credit_card.yml
@@ -12,6 +12,9 @@ models:
         tests:
           - not_null
           - unique
+          
+      - name: person_id
+        description: Unique ID for the person.
 
       - name: card_type
         description: Credit card name. 
