--- a/models/marts/schema/fct_sales_order_header.yml
+++ b/models/marts/schema/fct_sales_order_header.yml
@@ -9,6 +9,9 @@ models:
 
       - name: sales_order_id
         description: Unique ID for the sale order.
+        tests:
+         - unique
+         - not_null
 
       - name: customer_id
         description: Customer identification number. 
