--- a/models/marts/schema/dim_customers.yml
+++ b/models/marts/schema/dim_customers.yml
@@ -15,9 +15,15 @@ models:
 
       - name: customer_id
         description: Unique ID for the customer.
+        tests:
+         - unique
+         - not_null
       
       - name: person_id
         description: Unique ID for the person.
+        tests:
+         - unique
+         - not_null
 
       - name: credit_card_id
         description: Unique ID for CreditCard records.
