--- a/models/staging/schema/stg_customers.yml
+++ b/models/staging/schema/stg_customers.yml
@@ -16,7 +16,7 @@ models:
       - name: person_id
         description: Unique ID for the person.
         tests:
-          - not_null
+          - unique
         
 
       - name: territory_id
