--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -33,7 +33,7 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   dbt_analytics:
     # Config indicated by + and applies to all files under models/example/
-    
+    +tags: analytics
     staging: &staging
       +materialized: view
     intermediate: &intermediate
